k8s/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: earthquake
  labels:
    app.kubernetes.io/part-of: earthquake-system
